sort.dutchflag.DutchFlagAlgo.scala.error
Erreur de compilation :
DutchFlagAlgo:9: error: not found: value getColour
      if (i <= afterBlue && getColour() != Colour.BLUE){
                            ^DutchFlagAlgo:9: error: not found: value Colour
      if (i <= afterBlue && getColour() != Colour.BLUE){
                                           ^